--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,48 @@
 body {
     padding-top: 5rem;
 }
+
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding: 1em;
+}
+
+#green {
+    background-color: #3dd8d8;
+}
+
+img {
+    display: block;
+    height: auto; 
+    border-radius: 50%; 
+    padding: 2.5em;
+    max-width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.btn{
+    display: block;
+    padding: 15px 32px;
+    text-decoration: none;
+    float: right;
+    text-align: center;
+    border-radius: 5px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#info {
+    padding: 1em;
+}
+
+#info > h2{
+    word-spacing: 100px;
+}
+
+#info > p{
+    word-spacing: 70px;
+}
